# coral-nlp.github.io

./: LICENSE  README.md  _config.yml  imprint.html  imprint_en.html  index.html  index_en.html  legal.html  publications.bib
_includes/: awards.html  data.html  events.html  lang-switcher.html  publications.html
_includes/imprint/: infai.html  infai_en.html
_includes/people-cards/: binder.html  gallagher.html  gautam.html  hamotskyi.html  heyer.html  mueller.html  schroeder.html  stadler.html  zimmermann.html
_layouts/: default.html
_sass/: _index.scss  _thumbnail_cards.scss
bib2html/: bib2html.py  pyproject.toml  run.sh
bib2html/templates/: inproceedings.html.jinja2  proceedings.html.jinja2  publications.html.jinja2  publications_div_attributes.html.jinja2  publications_title.html.jinja2
css/: style.scss
src/: _config.yml
src/_includes/people-cards/: genet.html  gienapp.html  haenig.html  heyer.html  leinen.html  mueller.html  ruth.html  schroeder.html  wiegmann.html
src/_sass/: _index.scss
