[project]
name = "bib2html"
version = "0.1.0"
description = ""
authors = [
    {name = "Matti Wiegmann",email = "matti.wiegmann@uni-weimar.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "setuptools (>=75.8.2,<76.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "pybtex (>=0.24.0,<0.25.0)",
    "six (>=1.17.0,<2.0.0)",
    "pyld (>=2.0.4,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "wasabi (>=1.1.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
